2006-07-26  David Edelsohn  <edelsohn@gnu.org>

	Backport from mainline
	2006-07-14  Eliot Dresselhaus  <eliot@sonic.net>

        PR target/27287
	* config/rs6000/spe.md (frob_di_df_2): Add m->r alternative.

	2006-07-06  David Edelsohn  <edelsohn@gnu.org>

	PR target/28150
	* config/rs6000/rs6000.c (rs6000_legitimate_address): Do not allow
	PRE_{INC,DEC} of TFmode.

	2006-07-06  David Edelsohn  <edelsohn@gnu.org>
		    Alan Modra  <amodra@bigpond.net.au>

	PR target/28170
	* config/rs6000/rs6000.c (insvdi_rshift_rlwimi_p): Correct shiftop
	bounds. Simplify.

2006-07-26  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/28403
	* optabs.c (expand_doubleword_shift): Wrap the call to
	do_compare_rtx_and_jump with NO_DEFER_POP and OK_DEFER_POP.

2006-07-26  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/28402
	* optabs.c (expand_binop): Pass next_methods rather than methods
	to expand_doubleword_shift.

2006-07-25  Zdenek Dvorak <dvorakz@suse.cz>

	* tree-chrec.c (chrec_convert_aggressive): Return NULL on failure.

2006-07-24  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2006-07-17  Zdenek Dvorak <dvorakz@suse.cz>

	* tree-chrec.c (avoid_arithmetics_in_type_p): New.
	(convert_affine_scev, chrec_convert_aggressive): Use
	avoid_arithmetics_in_type_p.  Do not check for the subtypes
	separately.

2006-07-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28238
	* tree-inline.c (copy_bb): Check if we produced valid
	gimple copying and substituting a stmt.  If not, gimplify
	it.

2006-07-24  Toon Moene  <toon@moene.indiv.nluug.nl>

	* doc/invoke.texi: Remove mention of f77; Reformat table for
	inline parameter options correctly; mention that -malign-double
	is default on x86-64 targets.

2006-07-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/27795
	PR tree-optimization/27639
	PR tree-optimization/26719
	Backport from mainline
	2006-05-24  Zdenek Dvorak <dvorakz@suse.cz>
