@@ -1,3 +1,13 @@
+2006-07-29  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/28473
+	Backport from mainline
+	* convert.c (convert_to_integer): When transforming (T)foo(x) into
+	bar(x) check that bar's result type can represent all the values of T.
+	* builtins.c (fold_fixed_mathfn): When long and long long are the
+	same size, canonicalize llceil*, llfloor*, llround* and llrint*
+	functions to their lceil*, lfloor*, lround* and lrint* forms.
+
 2006-07-26  David Edelsohn  <edelsohn@gnu.org>
 
 	Backport from mainline
